# mc-server-status-notify

./: .gitignore  README.md  pyproject.toml  run.py
