[project]
name = "mc-server-status-notify"
version = "0.1.0"
description = "Check the online status of a Minecraft server, notify via Discord webhook when the status changed."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "mcstatus>=11.1.1",
    "requests>=2.32.3",
]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
